# serializer version: 1
# name: test_arabic_numerals
  '''
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos four-ar seven-ar -30;
  } kern_rtl;
  
  feature kern {
      lookup kern_rtl;
  } kern;
  
  '''
# ---
# name: test_arabic_numerals.1
  '''
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos four-ar seven-ar -30;
  } kern_rtl;
  
  feature kern {
      lookup kern_rtl;
  } kern;
  
  '''
# ---
# name: test_arabic_numerals.2
  '''
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos four-ar seven-ar -30;
  } kern_rtl;
  
  feature kern {
      lookup kern_rtl;
  } kern;
  
  '''
# ---
# name: test_arabic_numerals.3
  '''
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos four-ar seven-ar -30;
  } kern_rtl;
  
  feature kern {
      lookup kern_rtl;
  } kern;
  
  '''
# ---
# name: test_defining_classdefs
  '''
  @kern1.shatelugu.below = [sha-telugu.below];
  @kern1.ssatelugu.alt = [ssa-telugu.alt ss-telugu.alt];
  @kern2.katelugu.below = [ka-telugu.below];
  @kern2.rVocalicMatratelugu = [rVocalicMatra-telugu];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      enum pos @kern1.ssatelugu.alt sha-telugu.below 150;
      pos @kern1.shatelugu.below @kern2.katelugu.below 20;
      pos @kern1.ssatelugu.alt @kern2.katelugu.below 60;
  } kern_ltr;
  
  lookup kern_ltr_marks {
      pos @kern1.ssatelugu.alt @kern2.rVocalicMatratelugu 180;
  } kern_ltr_marks;
  
  feature kern {
      lookup kern_ltr;
      lookup kern_ltr_marks;
  } kern;
  
  '''
# ---
# name: test_dflt_language
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos a a 1;
      pos comma comma 2;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_dist_LTR
  '''
  @kern1.KND_aaMatra_R = [aaMatra_kannada];
  @kern2.KND_ailength_L = [aaMatra_kannada];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos @kern1.KND_aaMatra_R @kern2.KND_ailength_L 34;
  } kern_ltr;
  
  feature kern {
      script DFLT;
      language dflt;
      lookup kern_ltr;
      script latn;
      language dflt;
      lookup kern_ltr;
  } kern;
  
  feature dist {
      script knda;
      language dflt;
      lookup kern_ltr;
      script knd2;
      language dflt;
      lookup kern_ltr;
  } dist;
  
  '''
# ---
# name: test_dist_LTR_and_RTL
  '''
  @kern1.KND_aaMatra_R = [aaMatra_kannada];
  @kern2.KND_ailength_L = [aaMatra_kannada];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos @kern1.KND_aaMatra_R @kern2.KND_ailength_L 34;
  } kern_ltr;
  
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos u10A1E u10A06 <117 0 117 0>;
  } kern_rtl;
  
  feature dist {
      script knda;
      language dflt;
      lookup kern_ltr;
      script knd2;
      language dflt;
      lookup kern_ltr;
      script khar;
      language dflt;
      lookup kern_rtl;
  } dist;
  
  '''
# ---
# name: test_dist_RTL
  '''
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos u10A1E u10A06 <117 0 117 0>;
  } kern_rtl;
  
  feature kern {
      script DFLT;
      language dflt;
      lookup kern_rtl;
      script arab;
      language dflt;
      lookup kern_rtl;
  } kern;
  
  feature dist {
      script khar;
      language dflt;
      lookup kern_rtl;
  } dist;
  
  '''
# ---
# name: test_hyphenated_duplicates
  '''
  @kern1.hyphen = [comma];
  @kern1.hyphen_1 = [period];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      enum pos @kern1.hyphen comma 1;
      enum pos @kern1.hyphen_1 period 2;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_ignoreMarks
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos four six -55;
      pos one six -30;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_ignoreMarks.1
  '''
  lookup kern_ltr {
      pos four six -55;
      pos one six -30;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_insert_comment_after
  '''
  feature kern {
      pos one four' -50 six;
      #
      #
  } kern;
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_insert_comment_after.1
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_insert_comment_before
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  feature kern {
      #
      #
      pos one four' -50 six;
  } kern;
  
  '''
# ---
# name: test_insert_comment_before.1
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_insert_comment_before_extended
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  feature kern {
      #
      #
      pos one four' -50 six;
  } kern;
  
  '''
# ---
# name: test_insert_comment_middle
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_kern_LTR_and_RTL
  '''
  @kern1.A = [A Aacute];
  @kern1.reh = [reh-ar zain-ar reh-ar.fina];
  @kern2.alef = [alef-ar alef-ar.isol];
  
  lookup kern_dflt {
      pos seven four -25;
  } kern_dflt;
  
  lookup kern_ltr {
      enum pos @kern1.A V -40;
  } kern_ltr;
  
  lookup kern_rtl {
      pos four-ar seven-ar -30;
      pos reh-ar.fina lam-ar.init <-80 0 -80 0>;
      pos @kern1.reh @kern2.alef <-100 0 -100 0>;
  } kern_rtl;
  
  feature kern {
      lookup kern_dflt;
      script latn;
      language dflt;
      lookup kern_ltr;
      language TRK;
      script arab;
      language dflt;
      lookup kern_rtl;
      language URD;
  } kern;
  
  '''
# ---
# name: test_kern_LTR_and_RTL_with_marks
  '''
  @kern1.A = [A Aacute];
  @kern1.reh = [reh-ar zain-ar reh-ar.fina];
  @kern2.alef = [alef-ar alef-ar.isol];
  
  lookup kern_dflt {
      lookupflag IgnoreMarks;
      pos seven four -25;
  } kern_dflt;
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      enum pos @kern1.A V -40;
  } kern_ltr;
  
  lookup kern_ltr_marks {
      pos V acutecomb 70;
  } kern_ltr_marks;
  
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos four-ar seven-ar -30;
      pos reh-ar.fina lam-ar.init <-80 0 -80 0>;
      pos @kern1.reh @kern2.alef <-100 0 -100 0>;
  } kern_rtl;
  
  lookup kern_rtl_marks {
      pos reh-ar fatha-ar <80 0 80 0>;
  } kern_rtl_marks;
  
  feature kern {
      lookup kern_dflt;
      script latn;
      language dflt;
      lookup kern_ltr;
      lookup kern_ltr_marks;
      language TRK;
      script arab;
      language dflt;
      lookup kern_rtl;
      lookup kern_rtl_marks;
      language URD;
  } kern;
  
  '''
# ---
# name: test_kern_RTL_and_DFLT_numbers
  '''
  lookup kern_dflt {
      lookupflag IgnoreMarks;
      pos seven four -25;
  } kern_dflt;
  
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos yod-hb bet-hb <-100 0 -100 0>;
  } kern_rtl;
  
  feature kern {
      lookup kern_dflt;
      lookup kern_rtl;
  } kern;
  
  '''
# ---
# name: test_kern_RTL_with_marks
  '''
  @kern1.reh = [reh-ar zain-ar reh-ar.fina];
  @kern2.alef = [alef-ar alef-ar.isol];
  
  lookup kern_rtl {
      lookupflag IgnoreMarks;
      pos reh-ar.fina lam-ar.init <-80 0 -80 0>;
      pos @kern1.reh @kern2.alef <-100 0 -100 0>;
  } kern_rtl;
  
  lookup kern_rtl_marks {
      pos reh-ar fatha-ar <80 0 80 0>;
  } kern_rtl_marks;
  
  feature kern {
      lookup kern_rtl;
      lookup kern_rtl_marks;
  } kern;
  
  '''
# ---
# name: test_kern_hira_kana_hrkt
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos a-hira a-hira 1;
      pos a-hira a-kana 2;
      pos a-hira period 6;
      pos a-kana a-hira 3;
      pos a-kana a-kana 4;
      pos a-kana period 8;
      pos period a-hira 7;
      pos period a-kana 9;
      pos period period 5;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_kern_split_multi_glyph_class[same]
  '''
  @kern1.foo = [a period];
  @kern2.foo = [b period];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos a a 1;
      pos a b 2;
      pos a period 3;
      pos b a 4;
      pos b b 5;
      pos b period 6;
      pos period a 7;
      pos period b 8;
      pos period period 9;
      enum pos a @kern2.foo 12;
      enum pos period @kern2.foo 13;
      enum pos @kern1.foo b 10;
      enum pos @kern1.foo period 11;
      pos @kern1.foo @kern2.foo 14;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_kern_uniqueness
  '''
  @kern1.questiondown = [questiondown];
  @kern2.y = [y];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos questiondown y 35;
      enum pos questiondown @kern2.y -35;
      enum pos @kern1.questiondown y 35;
      pos @kern1.questiondown @kern2.y 15;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_kern_zyyy_zinh
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos uni0640 uni0640 0;
      pos uni0650 uni0650 1;
      pos uni0670 uni0670 2;
      pos uni10100 uni10100 30;
      pos uni10110 uni10110 31;
      pos uni10120 uni10120 32;
      pos uni10130 uni10130 33;
      pos uni102E0 uni102E0 34;
      pos uni102F0 uni102F0 35;
      pos uni1BCA0 uni1BCA0 36;
      pos uni1CD0 uni1CD0 3;
      pos uni1CE0 uni1CE0 4;
      pos uni1CF0 uni1CF0 5;
      pos uni1D360 uni1D360 37;
      pos uni1D370 uni1D370 38;
      pos uni1DC0 uni1DC0 6;
      pos uni1F250 uni1F250 39;
      pos uni20F0 uni20F0 7;
      pos uni3010 uni3010 8;
      pos uni3030 uni3030 9;
      pos uni30A0 uni30A0 10;
      pos uni3190 uni3190 11;
      pos uni31C0 uni31C0 12;
      pos uni31D0 uni31D0 13;
      pos uni31E0 uni31E0 14;
      pos uni3220 uni3220 15;
      pos uni3230 uni3230 16;
      pos uni3240 uni3240 17;
      pos uni3280 uni3280 18;
      pos uni3290 uni3290 19;
      pos uni32A0 uni32A0 20;
      pos uni32B0 uni32B0 21;
      pos uni32C0 uni32C0 22;
      pos uni3360 uni3360 23;
      pos uni3370 uni3370 24;
      pos uni33E0 uni33E0 25;
      pos uni33F0 uni33F0 26;
      pos uniA700 uniA700 27;
      pos uniA830 uniA830 28;
      pos uniFF70 uniFF70 29;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_mark_base_kerning
  '''
  @kern1.etamil = [aulengthmark-tamil va-tamil];
  @kern2.etamil = [aulengthmark-tamil va-tamil];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos aa-tamil va-tamil -20;
      pos va-tamil aa-tamil -20;
  } kern_ltr;
  
  lookup kern_ltr_marks {
      pos aulengthmark-tamil aulengthmark-tamil -200;
      enum pos aa-tamil @kern2.etamil -35;
      enum pos @kern1.etamil aa-tamil -35;
      pos @kern1.etamil @kern2.etamil -100;
  } kern_ltr_marks;
  
  feature kern {
      lookup kern_ltr;
      lookup kern_ltr_marks;
  } kern;
  
  '''
# ---
# name: test_mark_to_base_kern
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos B C -30;
  } kern_ltr;
  
  lookup kern_ltr_marks {
      pos A acutecomb -55;
  } kern_ltr_marks;
  
  feature kern {
      lookup kern_ltr;
      lookup kern_ltr_marks;
  } kern;
  
  '''
# ---
# name: test_mark_to_base_kern.1
  '''
  lookup kern_ltr {
      pos A acutecomb -55;
      pos B C -30;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_mark_to_base_only
  '''
  lookup kern_ltr_marks {
      pos A acutecomb -55;
  } kern_ltr_marks;
  
  feature kern {
      lookup kern_ltr_marks;
  } kern;
  
  '''
# ---
# name: test_mode.1
  '''
  feature kern {
      pos one four' -50 six;
  } kern;
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos seven six 25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_mode[existing]
  '''
  feature kern {
      pos one four' -50 six;
  } kern;
  
  '''
# ---
# name: test_quantize
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos four six -55;
      pos one six -25;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
# name: test_skip_spacing_marks
  '''
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos ka-deva ra-deva -250;
      pos ra-deva ka-deva -250;
  } kern_ltr;
  
  lookup kern_ltr_marks {
      pos highspacingdot-deva ka-deva -200;
      pos ka-deva highspacingdot-deva -150;
  } kern_ltr_marks;
  
  feature kern {
      lookup kern_ltr;
      lookup kern_ltr_marks;
  } kern;
  
  '''
# ---
# name: test_skip_zero_class_kerns
  '''
  @kern1.baz = [E F];
  @kern1.foo = [A B];
  @kern2.bar = [C D];
  @kern2.nul = [G H];
  
  lookup kern_ltr {
      lookupflag IgnoreMarks;
      pos G H -5;
      enum pos A @kern2.bar 5;
      enum pos @kern1.foo D 15;
      pos @kern1.baz @kern2.bar -10;
      pos @kern1.foo @kern2.bar 10;
  } kern_ltr;
  
  feature kern {
      lookup kern_ltr;
  } kern;
  
  '''
# ---
